@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{axodraw}
+\usepackage{axodraw2}
 \usepackage{jheppub}      
 \usepackage{verbatim}
 
@@ -465,9 +465,10 @@ fundamental soft
 SUSY breaking parameters (except $m_3^2$), $\tan \beta$ and the sign
 of $\mu$. 
 First we describe the evolution of the low-energy Standard Model input
-parameters below $M_Z$, then detail the rest of the algorithm.
+parameters below a scale where QED$\times$QCD is matched onto the MSSM
+($M_{QED \times QCD}$), then detail the rest of the algorithm.
 
-\subsection{Below $M_Z$}
+\subsection{Below $M_{QED\times QCD}$}
 
 $\alpha(M_Z)$, $\alpha_s(M_Z)$ are first evolved to 1 GeV using 3 loop QCD and
 1 loop QED~\cite{Gorishnii:1990zu,Tarasov:1980au,Gorishnii:1984zi} with
@@ -477,9 +478,10 @@ matching~\cite{Chetyrkin:1997sg} is negligible; the effect of 3-loop terms in
 the renormalisation group equations
 is an order of magnitude larger.
 Then, the two gauge couplings and all Standard Model fermion masses except
-the top mass are run to $M_Z$. The $\beta$ functions of fermion masses are
+the top mass are run to $M_{QED \times QCD}$. The $\beta$ functions of fermion
+masses are 
 taken to be zero at renormalisation scales below their running masses.
-The parameters at $M_Z$ are used as the low energy boundary condition in the
+The parameters at $M_{QED \times QCD}$ are used as the low energy boundary condition in the
 rest of the evolution.
 
 \subsection{Initial Estimate}
@@ -494,15 +496,15 @@ h_t(Q) = \frac{m_t(Q) \sqrt{2}}{v \sin \beta}, \qquad
 h_{b,\tau}(Q) = \frac{m_{b,\tau}(Q) \sqrt{2}}{v \cos \beta},
 \end{equation}
 where $v=246.22$ GeV is the Standard Model Higgs VEV and
-$Q=m_t(m_t)$ is the renormalisation scale.
+$Q=M_{QED\times QCD}$ is the renormalisation scale.
 The $\overline{MS}$ values of fermion masses are used for this initial
 estimate. 
 The fermion masses and $\alpha_s$
 at the top mass are obtained by evolving the previously
-obtained fermion masses and gauge couplings from $M_Z$ to $m_t$ (with the same
+obtained fermion masses and gauge couplings from $M_{QED \times QCD}$ to $m_t$ (with the same
 accuracy). 
-The electroweak gauge couplings are estimated by $\alpha_1(M_Z)
-= 5 \alpha(M_Z) / (3 c_W^2)$, $\alpha_2(M_Z) = \alpha(M_Z) / s_W^2$. Here,
+The electroweak gauge couplings are estimated by $\alpha_1(M_{QED \times QCD})
+= 5 \alpha(M_{QED \times QCD}) / (3 c_W^2)$, $\alpha_2(M_{QED \times QCD}) = \alpha(M_{QED \times QCD}) / s_W^2$. Here,
 $s_W$ is taken to be the on-shell value. These two gauge couplings are then
 evolved 
 to $m_t$ with 1-loop Standard Model $\beta$ functions, including the effect of
@@ -520,38 +522,38 @@ because its sign does not change through renormalisation.
 
 The whole system of
 MSSM soft parameters and SUSY couplings is then evolved to 1-loop order to
-$M_Z$. 
-At $M_Z$, the tree-level electroweak symmetry breaking (EWSB) conditions 
+$M_{QED \times QCD}$. 
+At $M_{QED \times QCD}$, the tree-level electroweak symmetry breaking (EWSB) conditions 
 are applied~\cite{Allanach:2000ii} to predict $\mu$ and $m_3$.
 The masses and mixings of MSSM super particles are then calculated at tree-level
-order by using the SUSY  parameters (and $m_3$) calculated at $M_Z$.
+order by using the SUSY  parameters (and $m_3$) calculated at $M_{QED \times QCD}$.
 \begin{figure}\begin{center}
 \label{fig:algorithm}
-\includegraphics[width=300pt]{alg.eps}
-% \begin{picture}(323,210)
-% \put(10,0){\makebox(280,10)[c]{\fbox{Calculate Higgs and
-%       sparticle pole masses. Run to $M_Z$.}}}
-% %\put(150,36.5){\vector(0,-1){23}}
-% \put(10,40){\makebox(280,10)[c]{\fbox{Run to $M_Z$.}}}
-% \put(150,76.5){\vector(0,-1){23}}
-% \put(10,160){\makebox(280,10)[c]{\fbox{Run to $M_X$. Apply soft SUSY breaking
-% boundary condition.}}}
-% \put(150,116.5){\vector(0,-1){23}}
-% \put(10,80){\makebox(280,10)[c]{\fbox{EWSB, iterative solution of $\mu$}}}
-% \put(150,156){\vector(0,-1){23}}
-% \put(10,120){\makebox(280,10)[c]{\fbox{Run to $M_{SUSY}$.}}}
-% \DashLine(115,125)(0,125){5}
-% \DashLine(0,125)(0,5){5}
-% \DashLine(0,5)(12,5){5}
-% \put(10,5){\vector(1,0){2}}
-% \put(20,130){convergence}
-% \put(150,196){\vector(0,-1){23}}
-% \put(10,200){\makebox(280,10)[c]{\fbox{SUSY radiative corrections to
-% $g_i(M_Z)$, $h_{t,b,\tau}(M_Z)$.}}}
-% \put(183,45){\line(1,0){140}}
-% \put(323,45){\line(0,1){160}}
-% \put(323,205){\vector(-1,0){40}}
-% \end{picture}
+%\includegraphics[width=300pt]{alg.eps}
+\begin{axopicture}(323,210)
+\put(10,0){\makebox(280,10)[c]{\fbox{Calculate Higgs and
+      sparticle pole masses. Run to $M_{QED \times QCD}$.}}}
+%\put(150,36.5){\vector(0,-1){23}}
+\put(10,40){\makebox(280,10)[c]{\fbox{Run to $M_{QED \times QCD}$.}}}
+\put(150,76.5){\vector(0,-1){23}}
+\put(10,160){\makebox(280,10)[c]{\fbox{Run to $M_X$. Apply soft SUSY breaking
+boundary condition.}}}
+\put(150,116.5){\vector(0,-1){23}}
+\put(10,80){\makebox(280,10)[c]{\fbox{EWSB, iterative solution of $\mu$}}}
+\put(150,156){\vector(0,-1){23}}
+\put(10,120){\makebox(280,10)[c]{\fbox{Run to $M_{SUSY}$.}}}
+\DashLine(110,125)(0,125){5}
+\DashLine(0,125)(0,5){5}
+\DashLine(0,5)(5,5){5}
+\put(10,5){\vector(1,0){2}}
+\put(20,130){convergence}
+\put(150,196){\vector(0,-1){23}}
+\put(10,200){\makebox(280,10)[c]{\fbox{SUSY radiative corrections to
+$g_i(M_{QED \times QCD})$, $h_{t,b,\tau}(M_{QED \times QCD})$.}}}
+\put(198,45){\line(1,0){125}}
+\put(323,45){\line(0,1){160}}
+\put(323,205){\vector(-1,0){20}}
+\end{axopicture}
 \caption{Fixed point iteration algorithm used to calculate the SUSY
   spectrum. Each step 
 (represented by a box) is detailed in the text. The initial step is the
@@ -577,14 +579,14 @@ reversed.}.
 In the threshold corrections, we use running $\overline{DR}$
 masses and parameters at the relevant scale, unless denoted otherwise in the
 text. 
-$m_t(M_Z)$ is calculated with 2-loop QCD~\cite{avdeev} and
+$m_t(M_{QED \times QCD})$ is calculated with 2-loop QCD~\cite{avdeev} and
 the full one-loop supersymmetric
-contributions to $m_t(M_Z)$, including logarithmic and finite contributions
+contributions to $m_t(M_{QED \times QCD})$, including logarithmic and finite contributions
 ($\Sigma_t^{BMPZ}$, eqs.~(D.16)-(D.18) of BMPZ):
 \begin{equation}
-m_t(M_Z)^{\overline{DR}}_{MSSM} = \Sigma_t^{BMPZ} + m_t^{pole}. 
+m_t(M_{QED \times QCD})^{\overline{DR}}_{MSSM} = \Sigma_t^{BMPZ} + m_t^{pole}. 
 \end{equation}
-%where $L\equiv \ln ({m_t^2(M_Z)^{\overline{DR}}_{MSSM}} / M_Z^2)$.
+%where $L\equiv \ln ({m_t^2(M_{QED \times QCD})^{\overline{DR}}_{MSSM}} / M_{QED \times QCD}^2)$.
 %$\frac{\Delta m}{m}$, from Eq. 62 of ref.~\cite{bednyakov} denotes the
 %two-loop supersymmetric QCD contribution in the approximation that the masses
 %of squarks and gluino are all equal to $M_{SUSY}$.
@@ -592,45 +594,45 @@ m_t(M_Z)^{\overline{DR}}_{MSSM} = \Sigma_t^{BMPZ} + m_t^{pole}.
 %$\Sigma_t^{BMPZ}$. 
 These corrections are important because the region of valid EWSB is very
 sensitive to $m_t$~\cite{Allanach:2000ii}. 
-To calculate $m_b(M_Z)^{\overline{DR}}$, we first calculate the Standard Model
+To calculate $m_b(M_{QED \times QCD})^{\overline{DR}}$, we first calculate the Standard Model
 $\overline{DR}$ value from the $\overline{MS}$ one~\cite{avdeev,bottomMass}
 \begin{equation}
-m_b(M_Z)^{\overline{DR}}_{SM} =
-m_b(M_Z)^{\overline{MS}}_{SM} \left(1 - \frac{{\alpha_s}}{3 \pi}+ 
+m_b(M_{QED \times QCD})^{\overline{DR}}_{SM} =
+m_b(M_{QED \times QCD})^{\overline{MS}}_{SM} \left(1 - \frac{{\alpha_s}}{3 \pi}+ 
 \frac{3 g^2}{128 \pi^2} + \frac{13 g_1^2}{1152 \pi^2} \right).
 \end{equation}
 We then add the leading one-loop supersymmetric corrections
 \begin{equation}
-m_b(M_Z)^{\overline{DR}}_{MSSM}=m_b(M_Z)^{\overline{DR}}_{SM} / (1 +
+m_b(M_{QED \times QCD})^{\overline{DR}}_{MSSM}=m_b(M_{QED \times QCD})^{\overline{DR}}_{SM} / (1 +
   \Delta_{SUSY}^b).
 \end{equation}
 The contributions to $\Delta_{SUSY}^b$ are
 included in full from eq.~D.18 of BMPZ (neglecting the term proportional to
 $e$, since that is already included in the QED calculation of the SM 
-$m_b(M_Z)$).
+$m_b(M_{QED \times QCD})$).
 Both finite and leading logarithmic
 corrections are included.
 After the Standard Model $\overline{MS}$ value of $m_\tau$ is converted to the
 $\overline{DR}$ value via
 \begin{equation}
-m_\tau(M_Z)^{\overline{DR}}_{SM} = m_\tau(M_Z)^{\overline{MS}}_{SM}
+m_\tau(M_{QED \times QCD})^{\overline{DR}}_{SM} = m_\tau(M_{QED \times QCD})^{\overline{MS}}_{SM}
 \left( 1 - \frac{3}{128 \pi^2} (g_1^2 - g_2^2)\right).
 \end{equation}
 The full one-loop MSSM corrections from the appendix 
 of BPMZ 
 (aside from the photon
 contribution, since that has already been included in
-$m_\tau(M_Z)^{\overline{MS}}_{SM}$) 
+$m_\tau(M_{QED \times QCD})^{\overline{MS}}_{SM}$) 
 are then used to correct
-$m_\tau(M_Z)^{\overline{DR}}_{SM}$:
+$m_\tau(M_{QED \times QCD})^{\overline{DR}}_{SM}$:
 \begin{equation}
-m_\tau(M_Z)^{\overline{DR}}_{MSSM} = m_\tau(M_Z)^{\overline{DR}}_{SM}
+m_\tau(M_{QED \times QCD})^{\overline{DR}}_{MSSM} = m_\tau(M_{QED \times QCD})^{\overline{DR}}_{SM}
  (1 + \Sigma_\tau).
 \end{equation}
-The one-loop $\overline{DR}$ values for $m_t(M_Z)$, $m_b(M_Z)$,
-$m_{\tau}(M_Z)$ are then substituted with the $\overline{DR}$ value
+The one-loop $\overline{DR}$ values for $m_t(M_{QED \times QCD})$, $m_b(M_{QED \times QCD})$,
+$m_{\tau}(M_{QED \times QCD})$ are then substituted with the $\overline{DR}$ value
 of $v(Q)$ into eq.~(\ref{yuksaway}) to calculate the third family
-$\overline{DR}$ Yukawa couplings at $M_Z$.
+$\overline{DR}$ Yukawa couplings at $M_{QED \times QCD}$.
 $v(Q)$ is run to two-loops.
 The other diagonal elements of the Yukawa matrices are set by
 eq.~(\ref{yuksaway}) but with fermion masses replaced by the $\overline{MS}$
@@ -677,7 +679,7 @@ this large uncertainty on its value issuing from {\tt SOFTSUSY}\footnote{It is
 in the future to include complex phases in Yukawa matrices,
 sfermion soft mass squared terms and trilinear scalar couplings.}.
 %It is hoped that Eq.~\ref{ckmPar} 
-The up (by default), or down Yukawa couplings at $M_Z$ are mixed in the
+The up (by default), or down Yukawa couplings at $M_{QED \times QCD}$ are mixed in the
 weak eigenbasis via
 \begin{equation}
 (Y_U)'=V_{CKM}^T (Y^U) V_{CKM}, \qquad 
@@ -686,7 +688,7 @@ weak eigenbasis via
 where the primed Yukawa matrix is in the weak eigenbasis and the unprimed is
 in the mass eigenbasis. 
 
-Full one-loop corrections to $g_i(M_Z)$ are
+Full one-loop corrections to $g_i(M_{QED \times QCD})$ are
 included. 
 The one-loop treatment of electroweak gauge couplings follows
 from appendix C of BMPZ. Two-loop SM contributions~\cite{degrassi} in the
@@ -694,24 +696,25 @@ $\overline{MS}$~scheme are included. The pole value
 of $m_t$ is used in the calculation of the $W$ and $Z$ self energy in order to
 calculate $\sin \theta_w$, since this is what is assumed in the two-loop
 corrections. 
-We use the fine structure constant $\alpha(M_Z)^{\overline{MS}}$, the Z-boson
+We use the fine structure constant $\alpha(M_{Z})^{\overline{MS}}$, the Z-boson
 mass 
 $M_Z$ and the Fermi decay constant $G_\mu$ as inputs. $M_W$ is predicted from
 these inputs.
 Because the EWSB constraints tend to 
-depend sensitively upon $g_{1,2}(M_Z)$, accurate values for them are
+depend sensitively upon $g_{1,2}(M_{QED \times QCD})$, accurate values for them are
 determined iteratively. 
 An estimate of the $\overline{DR}$ value of $s_W^2$ is used to yield a
 better estimate until the required accuracy is reached (usually within 3 or
 4 iterations).
-The QCD coupling is input as $\alpha_s(M_Z)^{\overline{MS}}$ and
+The QCD coupling is input as $\alpha_s(M_{QED \times QCD})^{\overline{MS}}$ and
 is modified by gluino, squark and top loops as in
 eqs.~(2),(3) of BMPZ in order to obtain the MSSM $\overline{DR}$ value. 
 
 $\overline{DR}$ masses are used for all particles in loops in \SOFTSUSY, except
-for $M_{A^0}$ when calculating gauge and Yukawa couplings at $M_Z$. At some
-points in parameter space, the running mass is tachyonic at $M_Z$, whereas the
-pole mass is normal. Using the pole mass at $M_Z$ circumvents this problem.
+for $M_{A^0}$ when calculating gauge and Yukawa couplings at $M_{QED \times QCD}$. At some
+points in parameter space, the running mass is tachyonic at $M_{QED \times QCD}$, whereas the
+pole mass is normal. Using the pole mass at $M_{QED \times QCD}$ circumvents
+this problem. 
 
 \subsection{MSSM Renormalisation}
 
@@ -748,9 +751,9 @@ where the lighter two families' Yukawa couplings are neglected.
 
 \subsection{Electroweak Symmetry Breaking}
 
-The Higgs VEV parameter $v(M_Z)$ is set by:
+The Higgs VEV parameter $v(M_{QED \times QCD})$ is set by:
 \begin{equation}
-v^2(M_Z) = 4 \frac{M_Z^2 + \Re\Pi_{ZZ}^T(M_Z)}{g_2^2(M_Z) + 3 g_1^2(M_Z) / 5},
+v^2(M_{QED \times QCD}) = 4 \frac{M_Z^2 + \Re\Pi_{ZZ}^T(M_{QED \times QCD})}{g_2^2(M_{QED \times QCD}) + 3 g_1^2(M_{QED \times QCD}) / 5},
 \end{equation}
 where
 $M_Z$ is the pole $Z$ mass and
@@ -890,7 +893,7 @@ Every Higgs mass is determined at an external momentum scale equal to its
 pole mass. $\alpha$ is determined in the limit $p^2=0$ (at $p^2=m_h^2$, the
 CP-even Higgs mass squared matrix is complex symmetric).
 
-Finally, the running MSSM parameters are evolved back down to $M_Z$.
+Finally, the running MSSM parameters are evolved back down to $M_{QED \times QCD}$.
 The whole process is iterated as shown in figure~\ref{fig:algorithm}, until the
 $\overline{DR}$ sparticle masses evaluated at $M_{SUSY}$
 all converge to better than the desired fractional accuracy
@@ -932,7 +935,7 @@ $\{ a_i \}$ are any parameters in the user supplied boundary condition on the
 soft supersymmetry breaking parameters augmented by $h_t(M_X), \mu(M_X)$ and
 $m_3(M_X)$. The derivatives in eq.~(\ref{FT100index}) are calculated by 
 numerically finding the derivative of $M_Z^{pole}=\hat M_Z +
-\Re\Pi_{ZZ}^T(M_Z^2)$ in eq.~(\ref{mucond}). 
+\Re\Pi_{ZZ}^T(M_{QED \times QCD}^2)$ in eq.~(\ref{mucond}). 
 The input parameters are
 changed slightly (one by one), then the MSSM parameter ensemble is run from 
 $M_X$ to $M_{SUSY}$ where the sparticle mass spectrum is determined along with the
