@@ -36,3 +36,4 @@ Block SOFTSUSY               # Optional SOFTSUSY-specific parameters
 #   23   0.000000000e+00      # No expansion of 2-loop gluino terms
 #   24   1.000000000e-06      # If decay BR is below this number, don't output
 #   25   1.000000000e+00	     # If set to 0, don't calculate 3-body decays (1=default)
+#   27   1.743000000e+02      # Scale to match QEDxQCD to MSSM (default MZ)   
